src/test/ui/associated-types/cache/project-fn-ret-invariant.transmute.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/project-fn-ret-invariant.rs:58:8
   |
LL |    bar(foo, x) //[transmute]~ ERROR E0495
   |        ^^^

error: borrowed data escapes outside of function
  --> $DIR/project-fn-ret-invariant.rs:58:4
   |
LL | fn baz<'a,'b>(x: Type<'a>) -> Type<'static> {
   |               - `x` is a reference that is only valid in the function body
...
LL |    bar(foo, x) //[transmute]~ ERROR E0495
   |    ^^^^^^^^^^^ `x` escapes the function body here

error: aborting due to previous error

